chore: Add redis environment variables

--- a/.env
+++ b/.env
@@ -1,8 +1,14 @@
 NODE_ENV=development
+# Application
+NAME=go-devrel-back-end
 PORT=4000
-
+# Database
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=devrel
 DB_PASS=devrel
 DB_NAME=user
+# Cache
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
