--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,17 @@
 version: "3.9"
 
 services:
-  backend:
-    image: go-devrel-backend
-    build:
-      context: .
-      dockerfile: Dockerfile
+  redis-compose:
+    image: redis:latest
     ports:
-      - 3000:3000
-      - 9229:9229
-      - 3100:8080
-    volumes:
-      - .:/app
-    depends_on:
-      - backend-db
+      - 6379:6379
 
   backend-db:
-    image: postgres:latest 
+    image: postgres:latest
     ports:
       - 5432:5432
     volumes:
-      - "./postgres:/var/lib/postgresql/data"
+      - ./temp/postgres:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: user
       POSTGRES_USER: devrel
