--- a/.env
+++ b/.env
@@ -12,3 +12,8 @@ DB_NAME=user
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
+# SMTP
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=godevreldevelopment@gmail.com
+SMTP_PASSWORD=GoDevrel@123
