--- a/package.json
+++ b/package.json
@@ -21,56 +21,60 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.4.1",
-    "@nestjs/config": "^1.2.0",
-    "@nestjs/core": "^8.4.1",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.4.4",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.4.1",
+    "@nestjs/platform-express": "^8.4.4",
     "@nestjs/typeorm": "^8.0.3",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
-    "cache-manager": "^3.6.0",
+    "cache-manager": "^3.6.1",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "luxon": "^2.3.1",
+    "ejs": "^3.1.7",
+    "luxon": "^2.3.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
-    "redis": "^4.0.4",
+    "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
-    "typeorm": "^0.2.45"
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.3",
-    "@nestjs/schematics": "^8.0.8",
-    "@nestjs/testing": "^8.4.1",
+    "@nestjs-modules/mailer": "^1.6.1",
+    "@nestjs/cli": "^8.2.5",
+    "@nestjs/schematics": "^8.0.10",
+    "@nestjs/testing": "^8.4.4",
     "@types/cache-manager": "^3.4.3",
     "@types/cache-manager-redis-store": "^2.0.1",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.4.1",
-    "@types/luxon": "^2.3.0",
-    "@types/node": "^17.0.21",
+    "@types/jest": "27.5.0",
+    "@types/luxon": "^2.3.2",
+    "@types/node": "^17.0.31",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "eslint": "^8.11.0",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.5.1",
-    "prettier": "^2.6.0",
+    "jest": "^28.0.3",
+    "nodemailer": "^6.7.4",
+    "prettier": "^2.6.2",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.2.2",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^9.2.8",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.1",
+    "ts-loader": "^9.3.0",
     "ts-node": "^10.7.0",
-    "tsconfig-paths": "^3.14.0",
-    "typescript": "^4.6.2"
+    "tsconfig-paths": "^4.0.0",
+    "typescript": "^4.6.4"
   },
   "jest": {
     "moduleFileExtensions": [
