--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
+# Node
 NODE_ENV=development
 # Application
 NAME=go-devrel-back-end
 PORT=4000
+BASE_CALLBACK_URL=http://localhost:4000
 # Database
 DB_HOST=localhost
 DB_PORT=5432
