chore: cahnge express to fastify

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/platform-fastify": "^8.4.4",
     "@nestjs/typeorm": "^8.0.3",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
@@ -36,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "ejs": "^3.1.7",
+    "fastify-helmet": "^7.1.0",
     "luxon": "^2.3.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
