--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: redis:latest
     ports:
       - 6379:6379
+    networks:
+      - devrel
 
   backend-db:
     image: postgres:latest
@@ -16,3 +18,8 @@ services:
       POSTGRES_DB: user
       POSTGRES_USER: devrel
       POSTGRES_PASSWORD: devrel
+    networks:
+      - devrel
+
+networks:
+  devrel:
