--- a/.env
+++ b/.env
@@ -1,19 +1,30 @@
 # Node
 NODE_ENV=development
+
 # Application
 NAME=go-devrel-back-end
 PORT=4000
 BASE_CALLBACK_URL=http://localhost:4000
+
 # Database
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=devrel
-DB_PASS=devrel
+DB_USER=admin
+DB_PASS=admin
 DB_NAME=user
+
+# MongoDB
+MONGO_DB_HOST=localhost
+MONGO_DB_PORT=27017
+MONGO_DB_USER=admin
+MONGO_DB_PASS=admin
+MONGO_DB_NAME=forms
+
 # Cache
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
+
 # SMTP
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
