--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.13.2",
     "ejs": "^3.1.8",
     "luxon": "^3.0.1",
+    "mongodb": "^3.7.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
