--- a/.env
+++ b/.env
@@ -9,15 +9,15 @@ BASE_CALLBACK_URL=http://localhost:4000
 # Database
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=admin
-DB_PASS=admin
+DB_USER=root
+DB_PASS=root
 DB_NAME=user
 
 # MongoDB
 MONGO_DB_HOST=localhost
 MONGO_DB_PORT=27017
-MONGO_DB_USER=admin
-MONGO_DB_PASS=admin
+MONGO_DB_USER=root
+MONGO_DB_PASS=root
 MONGO_DB_NAME=forms
 
 # Cache
