--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/basic-auth": "^4.0.0",
+    "@fastify/compress": "^6.1.0",
     "@fastify/helmet": "^9.1.0",
+    "@fastify/static": "^6.5.0",
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.8",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.8",
@@ -30,10 +34,10 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.8",
     "@nestjs/platform-fastify": "^9.0.8",
+    "@nestjs/schematics": "^9.0.1",
+    "@nestjs/swagger": "^6.0.5",
     "@nestjs/typeorm": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
-    "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/schematics": "^9.0.1",
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.1.0",
     "cache-manager-redis-store": "^2.0.0",
