--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "ejs": "^3.1.8",
+    "express-basic-auth": "^1.2.1",
     "luxon": "^3.0.1",
     "mongodb": "^3.7.3",
     "passport": "^0.6.0",
