fix: gmail authentication issue

--- a/.env
+++ b/.env
@@ -26,4 +26,4 @@ REDIS_PASSWORD=
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=godevreldevelopment@gmail.com
-SMTP_PASSWORD=GoDevrel@123
+SMTP_PASSWORD=ozqmorctxwcadfcz
