--- a/.env.prod
+++ b/.env.prod
@@ -28,4 +28,4 @@ REDIS_PASSWORD=bhyA5RXiehyOawN9D5pH0iz61ildNiF1
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=godevreldevelopment@gmail.com
-SMTP_PASSWORD=GoDevrel@123
+SMTP_PASSWORD=ozqmorctxwcadfcz
