--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "ejs": "^3.1.8",
+    "json2csv": "^5.0.7",
     "luxon": "^3.0.1",
     "mongodb": "^3.7.3",
     "passport": "^0.6.0",
@@ -62,6 +63,7 @@
     "@types/cache-manager-redis-store": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.6",
+    "@types/json2csv": "^5.0.3",
     "@types/luxon": "^3.0.0",
     "@types/node": "^18.6.3",
     "@types/nodemailer": "^6.4.4",
