feat: add more health indicator

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fastify/helmet": "^9.1.0",
     "@fastify/static": "^6.5.0",
     "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/axios": "^1.0.0",
     "@nestjs/common": "^9.0.8",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.8",
@@ -35,6 +36,7 @@
     "@nestjs/platform-fastify": "^9.0.8",
     "@nestjs/schematics": "^9.0.1",
     "@nestjs/swagger": "^6.0.5",
+    "@nestjs/terminus": "^9.1.4",
     "@nestjs/typeorm": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
