--- a/.env
+++ b/.env
@@ -4,21 +4,21 @@ PORT=4000
 BASE_CALLBACK_URL=http://localhost:4000
 
 # Database
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
 DB_USER=root
 DB_PASS=root
 DB_NAME=users
 
 # MongoDB
-MONGO_DB_HOST=localhost
+MONGO_DB_HOST=mongodb
 MONGO_DB_PORT=27017
 MONGO_DB_USER=root
 MONGO_DB_PASS=root
 MONGO_DB_NAME=forms
 
 # Cache
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
