--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - 4000:4000
     command: npm run start:dev
     volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+      - ./:/app
+      - /app/node_modules
     env_file: ./.env
     networks:
       - devrel
