--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cross-env": "^7.0.3",
     "ejs": "^3.1.8",
     "json2csv": "^5.0.7",
+    "lodash": "^4.17.21",
     "luxon": "^3.0.1",
     "mongodb": "^3.7.3",
     "passport": "^0.6.0",
@@ -66,6 +67,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.6",
     "@types/json2csv": "^5.0.3",
+    "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.0.0",
     "@types/node": "^18.6.3",
     "@types/nodemailer": "^6.4.4",
