--- a/fly.toml
+++ b/fly.toml
@@ -20,10 +20,10 @@ MONGO_DB_PORT = 27017
 MONGO_DB_USER = "devrelAdmin"
 NAME = "go-devrel-back-end"
 PORT = 4000
-REDIS_HOST = "redis-13605.c257.us-east-1-3.ec2.cloud.redislabs.com"
-REDIS_PASSWORD = "Olz3N9cb61xlzOEfwgWJujWUEcYunhGf"
-REDIS_PORT = 13605
+REDIS_HOST = "redis-10013.c262.us-east-1-3.ec2.cloud.redislabs.com"
+REDIS_PORT = 10013
 REDIS_USER = "default"
+REDIS_PASSWORD = "YBdF4FMFf60CJkFMxubwF196Grc1JPBL"
 SMTP_HOST = "smtp.gmail.com"
 SMTP_PASSWORD = "ozqmorctxwcadfcz"
 SMTP_PORT = 587
@@ -33,8 +33,7 @@ SMTP_USER = "godevreldevelopment@gmail.com"
 auto_rollback = true
 
 [[services]]
-http_checks = []
-internal_port = 8080
+internal_port = 4000
 processes = ["app"]
 protocol = "tcp"
 script_checks = []
@@ -57,3 +56,13 @@ grace_period = "1s"
 interval = "15s"
 restart_limit = 0
 timeout = "2s"
+
+[[services.http_checks]]
+interval = 10000
+grace_period = "5s"
+method = "get"
+path = "/health"
+protocol = "http"
+restart_limit = 3
+timeout = 2000
+tls_skip_verify = false
